Updated demo configurations

--- a/LeagueDemo/Configuration/Tenant.Default.Development.config
+++ b/LeagueDemo/Configuration/Tenant.Default.Development.config
@@ -66,9 +66,9 @@
   </SiteContext>
   <OrganizationContext>
     <!-- The full name of the organization. -->
-    <Name>volleyball-liga.de</Name>
+    <Name>The Volleyball League</Name>
     <!-- The short version of the organization's name. -->
-    <ShortName>volleyball-liga.de</ShortName>
+    <ShortName>Volleyball League</ShortName>
     <Description></Description>
     <!-- The homepage for the organization (NOT the league website). -->
     <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
