--- a/LeagueDemo/Configuration/Tenant.TestOrg.Development.config
+++ b/LeagueDemo/Configuration/Tenant.TestOrg.Development.config
@@ -21,35 +21,35 @@
     <Email>
       <ContactFrom>
         <!-- The display name of a recipient. -->
-        <DisplayName>Testorganization Augsburg</DisplayName>
+        <DisplayName>Testorganization</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </ContactFrom>
       <!-- "From" mailbox address for the contact form -->
       <ContactTo>
         <!-- The display name of a recipient. -->
-        <DisplayName>Testorganization Augsburg</DisplayName>
+        <DisplayName>Testorganization</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </ContactTo>
       <!-- General "To" mailbox address for emails generated programmatically -->
       <GeneralTo>
         <!-- The display name of a recipient. -->
-        <DisplayName>Testorganization Augsburg</DisplayName>
+        <DisplayName>Testorganization</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </GeneralTo>
       <!-- General "From" mailbox address for emails generated programmatically -->
       <GeneralFrom>
         <!-- The display name of a recipient. -->
-        <DisplayName>Testorganization Augsburg</DisplayName>
+        <DisplayName>Testorganization</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </GeneralFrom>
       <!-- General "BCC" mailbox address for emails generated programmatically -->
       <GeneralBcc>
         <!-- The display name of a recipient. -->
-        <DisplayName>Testorganization Augsburg</DisplayName>
+        <DisplayName>Testorganization</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </GeneralBcc>
@@ -69,14 +69,14 @@
     <Name>Volleyball Test League</Name>
     <!-- The short version of the organization's name. -->
     <ShortName>Test League</ShortName>
-    <Description>Liga für Testzwecke</Description>
+    <Description>This is a league for test purposes.</Description>
     <!-- The homepage for the organization (NOT the league website). -->
     <HomepageUrl>https://volleyball-liga.de/testorg</HomepageUrl>
     <Bank>
       <!-- If true, bank details are part of the confirmation email when registering a team. -->
       <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
       <!-- The name of the payment recipient, usually the organization name. -->
-      <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
+      <Recipient>axuno gemeinnuetzige GmbH - Testorganization</Recipient>
       <!-- The name of the bank where a payment is directed. -->
       <BankName>Fidor Bank AG</BankName>
       <!-- The BIC number of the bank account. -->
@@ -84,7 +84,7 @@
       <!-- The IBAN number of the bank. -->
       <Iban>DE61 700 222 000 020 137 800</Iban>
       <!-- The participation fee, may be zero. -->
-      <Amount>19.00</Amount>
+      <Amount>12.34</Amount>
       <!-- The currency for the participation fee. -->
       <Currency>EUR</Currency>
     </Bank>
