--- a/League/package.json
+++ b/League/package.json
@@ -7,32 +7,33 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "5.13.0",
-    "autoprefixer": "9.8.0",
-    "bootstrap": "4.5.0",
-    "bootstrap-select": "1.13.17",
-    "cssnano": "4.1.10",
-    "dropzone": "5.7.1",
-    "grunt": "1.3.0",
-    "grunt-cli": "1.3.2",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-uglify": "5.0.0",
-    "grunt-contrib-watch": "1.1.0",
-    "grunt-postcss": "0.9.0",
-    "grunt-sass": "3.1.0",
-    "jquery": "3.5.1",
-    "jquery-validation": "1.19.3",
-    "jquery-validation-unobtrusive": "3.2.11",
-    "js-cookie": "2.2.1",
-    "jsnlog": "2.29.0",
-    "moment": "2.26.0",
-    "node-sass": "4.14.1",
-    "pixrem": "5.0.0",
-    "popper.js": "1.16.1",
-    "tempusdominus-bootstrap-4": "5.1.2",
-    "tether": "1.4.7"
-  },
+    "devDependencies": {
+        "@fortawesome/fontawesome-free": "5.13.0",
+        "autoprefixer": "9.8.0",
+        "bootstrap": "4.5.0",
+        "bootstrap-select": "1.13.17",
+        "cssnano": "4.1.10",
+        "dropzone": "5.7.1",
+        "grunt": "1.3.0",
+        "grunt-cli": "1.3.2",
+        "grunt-contrib-concat": "1.0.1",
+        "grunt-contrib-copy": "1.0.0",
+        "grunt-contrib-uglify": "5.0.0",
+        "grunt-contrib-watch": "1.1.0",
+        "grunt-postcss": "0.9.0",
+        "grunt-sass": "3.1.0",
+        "jquery": "3.5.1",
+        "jquery-validation": "1.19.3",
+        "jquery-validation-unobtrusive": "3.2.11",
+        "js-cookie": "2.2.1",
+        "jsnlog": "2.29.0",
+        "moment": "2.26.0",
+        "node-sass": "4.14.1",
+        "pixrem": "5.0.0",
+        "popper.js": "1.16.1",
+        "tempusdominus-bootstrap-4": "5.1.2",
+        "tether": "1.4.7",
+        "set-value": ">=4.0.1"
+    },
   "dependencies": {}
 }
