--- a/League/package.json
+++ b/League/package.json
@@ -20,7 +20,7 @@
         "grunt-contrib-copy": "1.0.0",
         "grunt-contrib-uglify": "5.0.0",
         "grunt-contrib-watch": "1.1.0",
-        "grunt-postcss": "0.9.0",
+        "@lodder/grunt-postcss": "1.0.7",
         "grunt-sass": "3.1.0",
         "jquery": "3.5.1",
         "jquery-validation": "1.19.3",
