--- a/League/League.csproj
+++ b/League/League.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<AssemblyName>League</AssemblyName>
 		<RootNamespace>League</RootNamespace>
 		<UserSecretsId>ceea2bf6-8147-49b9-be85-26fca01f9ed3</UserSecretsId>
@@ -42,25 +42,26 @@
         <DebugType>portable</DebugType>
         <IncludeSymbols>true</IncludeSymbols>
         <DefineConstants>DEBUG;TRACE</DefineConstants>
+        <NoWarn>1701;1702;1591</NoWarn>
     </PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Axuno.TextTemplating" Version="1.1.0" />
-		<PackageReference Include="JSNLog" Version="2.30.0" />
-		<PackageReference Include="MailMergeLib" Version="5.7.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.13" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.13" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="3.1.13" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.11" />
+		<PackageReference Include="JSNLog" Version="3.0.1" />
+		<PackageReference Include="MailMergeLib" Version="5.8.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.3" />
 		<PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.6" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
-		<PackageReference Include="NLog" Version="4.7.8" />
-		<PackageReference Include="NLog.Web.AspNetCore" Version="4.11.0" />
-		<PackageReference Include="PuppeteerSharp" Version="2.0.4" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
+		<PackageReference Include="NLog" Version="4.7.15" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+		<PackageReference Include="PuppeteerSharp" Version="6.2.0" />
 		<PackageReference Include="StackifyMiddleware" Version="3.0.5.2" />
 	</ItemGroup>
 
@@ -244,6 +245,6 @@
 		<EnvironmentName>Production</EnvironmentName>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>1701;1702;0436</NoWarn>
+	  <NoWarn>1701;1702;0436;1591</NoWarn>
 	</PropertyGroup>
 </Project>
