--- a/League/League.csproj
+++ b/League/League.csproj
@@ -5,7 +5,9 @@
 		<AssemblyName>League</AssemblyName>
 		<RootNamespace>League</RootNamespace>
 		<UserSecretsId>ceea2bf6-8147-49b9-be85-26fca01f9ed3</UserSecretsId>
-		<NeutralLanguage></NeutralLanguage>
+        <LangVersion>latest</LangVersion>
+        <Nullable>disable</Nullable>
+        <NeutralLanguage>en</NeutralLanguage>
 		<Version>4.5.3</Version>
         <AssemblyVersion>4.5.3.0</AssemblyVersion>
 		<PackageId>Volleyball-League</PackageId>
