Add folder DataProtectionKeys to .gitignore
* DataProtectionKeys refers to Data Protection Keys for ASP.NET Core Data Protection
* Update README.md

--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,7 @@ paket-files/
 
 # Chromium browser to generate PDF
 Chromium-Win/
+
+# Data Protection Keys for ASP.NET Core Data Protection
+**/DataProtectionKeys/*.xml
+
