--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,14 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main, 'version/**', 'pr/**', 'pr-**' ]
+    paths-ignore:
+      - '**/*.md'
   pull_request:
-    branches: [ master ]
+    branches: [ main, 'version/**', 'pr/**', 'pr-**' ]
+    types: [opened, synchronize, reopened]
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   build:
@@ -12,11 +17,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 3.1.x
+        dotnet-version: 6.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
