--- a/TournamentManager/DAL/DatabaseGeneric/TournamentManager.DAL.DbGeneric.csproj
+++ b/TournamentManager/DAL/DatabaseGeneric/TournamentManager.DAL.DbGeneric.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <nullable>enable</nullable>
     <AssemblyName>TournamentManager.DAL.DbGeneric</AssemblyName>
     <RootNamespace>TournamentManager.DAL</RootNamespace>
   </PropertyGroup>
