--- a/TournamentManager/TournamentManager.Test/TournamentManager.Tests.csproj
+++ b/TournamentManager/TournamentManager.Test/TournamentManager.Tests.csproj
@@ -2,7 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <NeutralLanguage></NeutralLanguage>
+        <nullable>enable</nullable>
+        <NeutralLanguage>en</NeutralLanguage>
     </PropertyGroup>
 
     <ItemGroup>
