--- a/.gitignore
+++ b/.gitignore
@@ -254,7 +254,13 @@ paket-files/
 *.sln.iml
 
 # Chromium browser to generate PDF
-Chromium-Win/
+# ********************************
+# Do not ignore the folder
+!**/Chromium-Win/
+# Ignore files and subfolders
+**/Chromium-Win/*
+# Do not ignore the README
+!**/Chromium-Win/README.md
 
 # Data Protection Keys for ASP.NET Core Data Protection
 **/DataProtectionKeys/*.xml
