--- a/League.Tests/League.Tests.csproj
+++ b/League.Tests/League.Tests.csproj
@@ -2,19 +2,20 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <nullable>enable</nullable>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.11" />
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.1" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-        <PackageReference Include="NUnit" Version="3.13.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.17.0">
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.11" />
-        <PackageReference Include="Moq" Version="4.16.0" />
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.13" />
+        <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="ObjectsComparer" Version="1.4.1" />
     </ItemGroup>
 
