Editorial update of Leage.Demo/'Configuration/*.config

--- a/League.Demo/Configuration/Tenant.Default.Production.config
+++ b/League.Demo/Configuration/Tenant.Default.Production.config
@@ -76,13 +76,13 @@
       <!-- If true, bank details are part of the confirmation email when registering a team. -->
       <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
       <!-- The name of the payment recipient, usually the organization name. -->
-      <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
+      <Recipient>axuno - Testorganization</Recipient>
       <!-- The name of the bank where a payment is directed. -->
-      <BankName>Fidor Bank AG</BankName>
+      <BankName>Some Bank</BankName>
       <!-- The BIC number of the bank account. -->
-      <Bic>FDDODEMMXXX</Bic>
+      <Bic>ABCDEFGHXXX</Bic>
       <!-- The IBAN number of the bank. -->
-      <Iban>DE61 700 222 000 020 137 800</Iban>
+      <Iban>DE12 345 678 910 123 456 789</Iban>
       <!-- The participation fee, may be zero. -->
       <Amount>0.00</Amount>
       <!-- The currency for the participation fee. -->
