--- a/League.Demo/Configuration/Tenant.Default.Development.config
+++ b/League.Demo/Configuration/Tenant.Default.Development.config
@@ -73,20 +73,20 @@
     <!-- The homepage for the organization (NOT the league website). -->
     <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
     <Bank>
-      <!-- If true, bank details are part of the confirmation email when registering a team. -->
-      <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
-      <!-- The name of the payment recipient, usually the organization name. -->
-      <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
-      <!-- The name of the bank where a payment is directed. -->
-      <BankName>Fidor Bank AG</BankName>
-      <!-- The BIC number of the bank account. -->
-      <Bic>FDDODEMMXXX</Bic>
-      <!-- The IBAN number of the bank. -->
-      <Iban>DE61 700 222 000 020 137 800</Iban>
-      <!-- The participation fee, may be zero. -->
-      <Amount>0.00</Amount>
-      <!-- The currency for the participation fee. -->
-      <Currency>EUR</Currency>
+        <!-- If true, bank details are part of the confirmation email when registering a team. -->
+        <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
+        <!-- The name of the payment recipient, usually the organization name. -->
+        <Recipient>axuno - Testorganization</Recipient>
+        <!-- The name of the bank where a payment is directed. -->
+        <BankName>Some Bank</BankName>
+        <!-- The BIC number of the bank account. -->
+        <Bic>ABCDEFGHXXX</Bic>
+        <!-- The IBAN number of the bank. -->
+        <Iban>DE12 345 678 910 123 456 789</Iban>
+        <!-- The participation fee, may be zero. -->
+        <Amount>0.00</Amount>
+        <!-- The currency for the participation fee. -->
+        <Currency>EUR</Currency>
     </Bank>
   </OrganizationContext>
   <DbContext>
