--- a/TournamentManager/DAL/DatabaseSpecific/TournamentManager.DAL.DBSpecific.csproj
+++ b/TournamentManager/DAL/DatabaseSpecific/TournamentManager.DAL.DBSpecific.csproj
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-      <nullable>enable</nullable>
-      <AssemblyName>TournamentManager.DAL.DBSpecific</AssemblyName>
-    <RootNamespace>TournamentManager.DAL.DatabaseSpecific</RootNamespace>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="NuGetizer" Version="0.9.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.3" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <AssemblyName>TournamentManager.DAL.DBSpecific</AssemblyName>
+        <RootNamespace>TournamentManager.DAL.DatabaseSpecific</RootNamespace>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="NuGetizer" Version="0.9.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.3" />
+    </ItemGroup>
 </Project>
