--- a/TournamentManager/DAL/DatabaseGeneric/TournamentManager.DAL.DbGeneric.csproj
+++ b/TournamentManager/DAL/DatabaseGeneric/TournamentManager.DAL.DbGeneric.csproj
@@ -5,6 +5,7 @@
         <AssemblyName>TournamentManager.DAL.DbGeneric</AssemblyName>
         <RootNamespace>TournamentManager.DAL</RootNamespace>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>CA5362;CS1591</NoWarn>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="NuGetizer" Version="0.9.1">
