--- a/League/Configuration/NLog.Development.config
+++ b/League/Configuration/NLog.Development.config
@@ -13,11 +13,15 @@
     <!-- the targets to write to -->
     <targets async="true">
       <!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
-      <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log"
+      <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
               layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}" />
 
+      <!-- "not found" file log, only own logs. -->
+      <target xsi:type="File" name="notFoundFile-web" fileName="${var:logDirectory}logs\nlog-not-found-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
+              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message}" />
+
       <!-- another file log, only own logs. -->
-      <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log"
+      <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
               layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
       <!-- write to void i.e. just remove -->
@@ -34,6 +38,7 @@
 		
         <!-- Other log content -->
         <logger name="TournamentManager.*" minlevel="Info" writeTo="ownFile-web" final="true" />
+        <logger name="League.NotFound" minlevel="Info" writeTo="notFoundFile-web" final="true" />
         <logger name="League.*" minlevel="Trace" writeTo="ownFile-web" final="true" />
         <logger name="Axuno.*" minlevel="Trace" writeTo="ownFile-web" final="true" />
         <logger name="*" minlevel="Info" writeTo="ownFile-web" />
