--- a/League/package.json
+++ b/League/package.json
@@ -11,16 +11,16 @@
         "@fortawesome/fontawesome-free": "5.13.0",
         "autoprefixer": "9.8.0",
         "bootstrap": "4.5.0",
-        "bootstrap-select": "1.13.17",
+        "bootstrap-select": "1.13.18",
         "cssnano": "4.1.10",
         "dropzone": "5.7.1",
-        "grunt": "1.5.3",
-        "grunt-cli": "1.3.2",
+        "grunt": "1.6.1",
+        "grunt-cli": "1.4.3",
         "grunt-contrib-concat": "1.0.1",
         "grunt-contrib-copy": "1.0.0",
         "grunt-contrib-uglify": "5.0.0",
         "grunt-contrib-watch": "1.1.0",
-        "@lodder/grunt-postcss": "1.0.7",
+        "grunt-postcss": "0.9.0",
         "grunt-sass": "3.1.0",
         "jquery": "3.5.1",
         "jquery-validation": "1.19.5",
@@ -28,7 +28,7 @@
         "js-cookie": "2.2.1",
         "jsnlog": "2.30.0",
         "moment": "2.29.4",
-        "node-sass": "7.0.1",
+        "node-sass": "8.0.0",
         "pixrem": "5.0.0",
         "popper.js": "1.16.1",
         "tempusdominus-bootstrap-4": "5.1.2",
