--- a/League.Demo/League.Demo.csproj
+++ b/League.Demo/League.Demo.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <InternalsVisibleTo Include="League.Tests" />
+    </ItemGroup>
+
+    <ItemGroup>
         <None Remove="app_offline_.htm" />
     </ItemGroup>
 
