Add AddRazorRuntimeCompilation for debugging
* enabled for the web app
* enabled for the League RCL

--- a/League/Configuration/NLog.Internal.config
+++ b/League/Configuration/NLog.Internal.config
@@ -13,11 +13,11 @@
     <!-- the targets to write to -->
     <targets>
         <!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
-        <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log"
+        <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log" keepFileOpen="true" openFileCacheTimeout="5" concurrentWrites="true"
                 layout="${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}${newline}" />
 
         <!-- another file log, only own logs. -->
-        <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log"
+        <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log" keepFileOpen="true" openFileCacheTimeout="5" concurrentWrites="true"
                 layout="${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}${newline}" />
 
         <!-- write to void i.e. just remove -->
