--- a/League/package.json
+++ b/League/package.json
@@ -10,8 +10,8 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "5.13.0",
         "autoprefixer": "9.8.0",
-        "bootstrap": "4.6.2",
-        "cssnano": "4.1.10",
+        "bootstrap": "5.2.3",
+        "cssnano": "4.1.11",
         "dropzone": "5.7.1",
         "grunt": "1.6.1",
         "grunt-cli": "1.4.3",
@@ -27,9 +27,8 @@
         "moment": "2.29.4",
         "node-sass": "8.0.0",
         "pixrem": "5.0.0",
-        "popper.js": "1.16.1",
+        "@popperjs/core": "2.11.7",
         "tempusdominus-bootstrap-4": "5.39.2",
-        "tether": "1.4.7",
         "set-value": ">=4.0.1"
     },
   "dependencies": {}
