--- a/League/package.json
+++ b/League/package.json
@@ -17,7 +17,7 @@
         "grunt-cli": "1.4.3",
         "grunt-contrib-concat": "1.0.1",
         "grunt-contrib-copy": "1.0.0",
-        "grunt-contrib-uglify": "5.0.0",
+        "grunt-contrib-uglify": "5.2.2",
         "grunt-contrib-watch": "1.1.0",
         "grunt-postcss": "0.9.0",
         "grunt-sass": "3.1.0",
@@ -31,5 +31,7 @@
         "tempusdominus-bootstrap-4": "5.39.2",
         "set-value": ">=4.0.1"
     },
-  "dependencies": {}
+    "dependencies": {
+        "uglify-js": "3.17.4"
+    }
 }
