--- a/League/package.json
+++ b/League/package.json
@@ -17,19 +17,19 @@
         "grunt-cli": "1.4.3",
         "grunt-contrib-concat": "1.0.1",
         "grunt-contrib-copy": "1.0.0",
-        "grunt-contrib-uglify": "5.0.0",
+        "grunt-contrib-uglify": "5.2.2",
         "grunt-contrib-watch": "1.1.0",
         "grunt-postcss": "0.9.0",
         "grunt-sass": "3.1.0",
-        "jquery": "3.5.1",
         "js-cookie": "2.2.1",
         "jsnlog": "2.30.0",
-        "moment": "2.29.4",
         "node-sass": "8.0.0",
         "pixrem": "5.0.0",
         "@popperjs/core": "2.11.7",
-        "tempusdominus-bootstrap-4": "5.39.2",
+        "@eonasdan/tempus-dominus": "6.7.7",
         "set-value": ">=4.0.1"
     },
-  "dependencies": {}
+    "dependencies": {
+        "uglify-js": "3.17.4"
+    }
 }
