--- a/League.Demo/Configuration/AppSettings.Production.json
+++ b/League.Demo/Configuration/AppSettings.Production.json
@@ -1,11 +1,3 @@
 ﻿{
-	"IsLocal": false,
-	"Logging": {
-		"IncludeScopes": {},
-		"LogLevel": {
-			"Default": "Debug",
-			"System": "Information",
-			"Microsoft": "Information"
-		}
-	}
+	"IsLocal": false
 }
