--- a/League.Demo/Configuration/AppSettings.Development.json
+++ b/League.Demo/Configuration/AppSettings.Development.json
@@ -1,10 +1,3 @@
 ﻿{
-    "IsLocal": true,
-    "Logging": {
-        "IncludeScopes": {},
-        "LogLevel": {
-            "Default": "Trace",
-            "Microsoft": "Information"
-        }
-    }
+    "IsLocal": true
 }
