TenantConfigWatcher also watches for ConnetionString changes
* Remove the Catalog from the connection string, because it is anyway set from TenantContext
* Remove unnecessary (but still possible) tenant-specific connection strings

--- a/League.Demo/Configuration/Tenant.OtherOrg.Development.config
+++ b/League.Demo/Configuration/Tenant.OtherOrg.Development.config
@@ -91,9 +91,9 @@
   </OrganizationContext>
   <DbContext>
     <!-- The connection key used to retrieve the ConnectionString -->
-    <ConnectionKey>OtherOrgConnectionString</ConnectionKey>
+    <ConnectionKey>LeagueConnectionString</ConnectionKey>
     <!-- The catalog aka database name -->
-    <Catalog>TestOrg</Catalog>
+    <Catalog>OtherOrg</Catalog>
     <!-- The schema inside the database -->
     <Schema>dbo</Schema>
     <!-- The timeout value to use with database commands -->
