--- a/League.Demo/Configuration/Tenant.TestOrg.Development.config
+++ b/League.Demo/Configuration/Tenant.TestOrg.Development.config
@@ -91,7 +91,7 @@
   </OrganizationContext>
   <DbContext>
     <!-- The connection key used to retrieve the ConnectionString -->
-    <ConnectionKey>TestOrgConnectionString</ConnectionKey>
+    <ConnectionKey>LeagueConnectionString</ConnectionKey>
     <!-- The catalog aka database name -->
     <Catalog>TestOrg</Catalog>
     <!-- The schema inside the database -->
