--- a/TournamentManager/TournamentManager/TournamentManager.csproj
+++ b/TournamentManager/TournamentManager/TournamentManager.csproj
@@ -4,7 +4,8 @@
         <Product>Tournament Manager</Product>
         <TargetFramework>net6.0</TargetFramework>
         <NeutralLanguage>en</NeutralLanguage>
-        <Version>6.0.0</Version>
+        <Version>6.1.0</Version>
+        <FileVersion>6.1.0</FileVersion>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>1591</NoWarn>
         <Description>TournamentManager is the backend for Volleyball League.
@@ -22,7 +23,7 @@ Volleyball League is an open source sports platform that brings everything neces
         <PackageReference Include="OxyPlot.SkiaSharp" Version="2.1.2" />
         <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
         <PackageReference Include="Ical.Net" Version="4.2.0" />
-        <PackageReference Include="libphonenumber-csharp" Version="8.13.14" />
+        <PackageReference Include="libphonenumber-csharp" Version="8.13.16" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.3.2" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
         <PackageReference Include="YAXLib" Version="4.1.0" />
