--- a/League/League.csproj
+++ b/League/League.csproj
@@ -20,6 +20,8 @@ Localizations for English and German are included. The library is in operation o
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+        <!-- With dotnet, add parameter: -p:SatelliteResourceLanguages="""en;de""" -->
+        <SatelliteResourceLanguages>en;de</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <PropertyGroup>
