Improvements to TouramentManager.ExtensionMethods
SetEntityExtensions:
* Add tie-break rule handling for match points to MatchEntityExtensions. Use existing entries in MatchRuleEntity for configuration.
* New Add() overloads to more easily add sets from a string (e.g. "25:20 25:19") - especialy for unit tests

League.Models.MatchViewModels.EnterResultViewModel:
* Remove code duplication in method MapEntityToFormFields: Sets are now added using a SetEntityExtensions method

Refactoring:
* Replace class PointResultNullable with modified existing class PointResult
* Move methods CalculateSetPoints and Overrule from SetEntity to SetEntityExtensions
* Methods ToShortTimeString and ToLongTimeString of TimeSpanExtensions are implemented using TimeOnly
* Rename (unused) CloneHelperExtensions to EntityCoreExtensions

Unit tests:
* Add package FluentAssertions v6.11.0 to unit tests of solution
* Added more unit tests to classes in TournamentManager.ExtensionMethods

--- a/League.Demo/League.Demo.csproj
+++ b/League.Demo/League.Demo.csproj
@@ -4,6 +4,8 @@
         <Product>League.Demo</Product>
         <TargetFramework>net6.0</TargetFramework>
         <NeutralLanguage>en</NeutralLanguage>
+        <!-- With dotnet, add parameter: -p:SatelliteResourceLanguages="""en;de""" -->
+        <SatelliteResourceLanguages>en;de</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <ItemGroup>
